# crossword_compiler

./: .travis.yml  Cargo.toml  README.md  guild.yml
.circleci/: config.yml
src/: generator.rs  graph.rs  grid.rs  lib.rs  logging.rs  main.rs  utils.rs
src/generator/: mod.rs  recombination.rs  stats.rs
src/grid/: .mod.rs.swp  add_word.rs  builder.rs  cell.rs  matrix.rs  merge.rs  mod.rs  pdf_conversion.rs  properties.rs  random.rs  recombination.rs  spacing.rs  validity.rs  word.rs
templates/: latex_template.hbs
tests/: deterministic.sh  integration.rs
tests/resources/: bear_button.txt  blank_space.txt  built_up.txt  disconnected.txt  everyman_compatible.txt  everyman_starter.txt  input_with_clues.txt  simple_example.txt
tests/resources/fifteensquared/: everyman-3877.txt  quiptic-1109-by-pan.txt
