[package]
name = "crossword"
version = "0.1.0"
authors = ["Kath Nicholls <nichollskc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.2"
rand = "0.7.2"
rand_core = "0.4.0"
clap = "2.33.3"
serde={ version = "1.0", features=["derive"]}
serde_json="1.0.59"
ndarray = "0.14.0"
